pod-security/baseline/disallow-host-ports-range/.kyverno-test/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-host-ports-range
policies:
  - ../disallow-host-ports-range.yaml
resources:
  - resource.yaml
results:
  - kind: CronJob
    policy: disallow-host-ports-range
    resources:
      - badcronjob01
      - badcronjob02
      - badcronjob03
      - badcronjob04
      - badcronjob05
      - badcronjob06
      - badcronjob07
      - badcronjob08
      - badcronjob09
      - badcronjob10
    result: fail
    rule: host-port-range
  - kind: Deployment
    policy: disallow-host-ports-range
    resources:
      - baddeployment01
      - baddeployment02
      - baddeployment03
      - baddeployment04
      - baddeployment05
      - baddeployment06
      - baddeployment07
      - baddeployment08
      - baddeployment09
      - baddeployment10
    result: fail
    rule: host-port-range
  - kind: Pod
    policy: disallow-host-ports-range
    resources:
      - badpod01
      - badpod02
      - badpod03
      - badpod04
      - badpod05
      - badpod06
      - badpod07
      - badpod08
      - badpod09
      - badpod10
    result: fail
    rule: host-port-range
  - kind: CronJob
    policy: disallow-host-ports-range
    resources:
      - goodcronjob01
      - goodcronjob02
      - goodcronjob03
      - goodcronjob04
      - goodcronjob05
      - goodcronjob06
      - goodcronjob07
      - goodcronjob08
      - goodcronjob09
      - goodcronjob10
      - goodcronjob11
    result: pass
    rule: host-port-range
  - kind: Deployment
    policy: disallow-host-ports-range
    resources:
      - gooddeployment01
      - gooddeployment02
      - gooddeployment03
      - gooddeployment04
      - gooddeployment05
      - gooddeployment06
      - gooddeployment07
      - gooddeployment08
      - gooddeployment09
      - gooddeployment10
      - gooddeployment11
    result: pass
    rule: host-port-range
  - kind: Pod
    policy: disallow-host-ports-range
    resources:
      - goodpod01
      - goodpod02
      - goodpod03
      - goodpod04
      - goodpod05
      - goodpod06
      - goodpod07
      - goodpod08
      - goodpod09
      - goodpod10
      - goodpod11
    result: pass
    rule: host-port-range
